--- a/sv-kaetsch.html
+++ b/sv-kaetsch.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <style>
-    @media (max-width: 600px) {
-      p {
-        white-space: pre-wrap;
+    {
+      word-break: break-all;
       }
     }
   </style>
