--- a/sv-kaetsch.html
+++ b/sv-kaetsch.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-    <style>
-@media (max-width: 768px) {
-  body {
-    font-size: 16px;
+<script>
+function resizeText() {
+  // Aktuelle Breite des Browserfensters abrufen
+  const width = window.innerWidth;
+
+  // Textgröße basierend auf der Breite anpassen
+  if (width < 768) {
+    document.body.style.fontSize = "16px";
+  } else {
+    document.body.style.fontSize = "20px";
   }
 }
 
-@media (min-width: 769px) {
-  body {
-    font-size: 20px;
-  }
-}
-</style>
+// Event-Listener für "resize"-Ereignis hinzufügen
+window.addEventListener("resize", resizeText);
+
+// Textgröße beim Laden der Seite initialisieren
+resizeText();
+</script>
+
 
 <h1>Datenschutz&shy;erkl&auml;rung</h1>
 <h2>1. Datenschutz auf einen Blick</h2>
