--- a/sv-kaetsch.html
+++ b/sv-kaetsch.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
-<script>
-function resizeText() {
-  // Aktuelle Breite des Browserfensters abrufen
-  const width = window.innerWidth;
-
-  // Textgröße basierend auf der Breite anpassen
-  if (width < 768) {
-    document.body.style.fontSize = "16px";
-  } else {
-    document.body.style.fontSize = "20px";
-  }
+<style>
+  .container {
+  word-wrap: break-word;
 }
+</style>
 
-// Event-Listener für "resize"-Ereignis hinzufügen
-window.addEventListener("resize", resizeText);
-
-// Textgröße beim Laden der Seite initialisieren
-resizeText();
-</script>
 
 
 <h1>Datenschutz&shy;erkl&auml;rung</h1>
