--- a/sv-kaetsch.html
+++ b/sv-kaetsch.html
@@ -2,7 +2,16 @@
 <style>
   .HTMLEmbed {
   word-wrap: break-word;
-    max-width: 70%;
+    @media (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1.4rem;
+  }
+}
+
 }
 </style>
 
